--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -55,10 +55,13 @@
   <script src="./jspm_packages/system.js" type="text/javascript"></script>
   <script src="config.js" type="text/javascript"></script>
   <script type="text/javascript">
-    System
-        .import('src/boot/boot')
-        .catch( console.error.bind(console) ); // make sure any errors print to console
+    function init() {
+      System
+          .import('src/boot/boot')
+          .catch( console.error.bind(console) ); // make sure any errors print to console
+    }
   </script>
+  <script src="//apis.google.com/js/client:plusone.js?onload=init"></script>
 
 </body>
 </html>
