--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,54 +11,27 @@
 
   <title>Sites Run</title>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
-  <link rel="stylesheet" href="./jspm_packages/github/angular/bower-material@master/angular-material.css"/>
-  <link rel="stylesheet" href="./assets/app.css"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="./app.css"/>
 </head>
 
-<body ng-cloak layout="column" ng-controller="AppController as app">
+<body>
 
   <!-- Container #1 (see wireframe) -->
-  <md-toolbar>
-    <div class="md-toolbar-tools">
-      <h2>
-        <span>Sites Run</span>
-      </h2>
-      <span flex=""></span>
-      <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-    </div>
-  </md-toolbar>
 
-  <!-- Container #2 -->
-  <div flex layout="row">
+  <my-app>Loading...</my-app>
 
-    <!-- Container #3 -->
-    <md-sidenav class="md-whiteframe-4dp" md-is-locked-open="$mdMedia('gt-sm')"
-                md-component-id="left" ng-click="app.toggleList()">
-      <!-- Custom UsersList component -->
-      <users-list
-          users="app.users"
-          selected="app.selected"
-          on-selected="app.selectUser(user)">
-      </users-list>
-    </md-sidenav>
 
-    <!-- Container #4 -->
-    <md-content flex id="content">
-      <!-- Custom UserDetails component -->
-      <user-details
-          selected="app.selected" >
-      </user-details>
-    </md-content>
+  <script src="node_modules/core-js/client/shim.min.js"></script>
+  <script src="node_modules/zone.js/dist/zone.js"></script>
+  <script src="node_modules/reflect-metadata/Reflect.js"></script>
+  <script src="node_modules/systemjs/dist/system.src.js"></script>
 
-  </div>
-
-  <script src="./jspm_packages/system.js" type="text/javascript"></script>
-  <script src="config.js" type="text/javascript"></script>
+  <!--<script src="./jspm_packages/system.js" type="text/javascript"></script>-->
+  <script src="systemjs.config.js" type="text/javascript"></script>
   <script type="text/javascript">
     function init() {
-      System
-          .import('src/boot/boot')
-          .catch( console.error.bind(console) ); // make sure any errors print to console
+      System.import('app').catch(function(err){ console.error(err); });
     }
   </script>
   <script src="//apis.google.com/js/client:plusone.js?onload=init"></script>
