--- a/src/main/webapp/src/index.html
+++ b/src/main/webapp/src/index.html
@@ -12,6 +12,6 @@
 
 </head>
 <body>
-  <material2-app-app>Loading...</material2-app-app>
+  <sites-run-app>Loading...</sites-run-app>
 </body>
 </html>
