front end works

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sites Run</title>
-  <base href="/dist/">
+  <base href="/">
 
   <meta name="description" content="Save web links with customized names for memorizing and sharing.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
