--- a/src/main/webapp/src/index.html
+++ b/src/main/webapp/src/index.html
@@ -7,12 +7,7 @@
 
   <meta name="description" content="Save web links with customized names for memorizing and sharing.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script>
-    function onLoadCallback() {
-      gapi.client.load('sitesRunApi', 'v1', null, '//' + window.location.host + '/_ah/api');
-    }
-  </script>
-  <script src="https://apis.google.com/js/client:plusone.js?onload=onLoadCallback" type="text/javascript"></script>
+  <script src="https://apis.google.com/js/client:plusone.js" type="text/javascript"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
