rename api path

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,5 +14,5 @@
 </head>
 <body>
   <sites-run-app>Loading...</sites-run-app>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.8d2016d626a05950ce71.bundle.js"></script><script type="text/javascript" src="main.c7671fa29f6b6579a6a9.bundle.js"></script></body>
 </html>
