remove footer and update looks

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,10 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://apis.google.com/js/client:plusone.js" type="text/javascript"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
   <sites-run-app>Loading...</sites-run-app>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.8d2016d626a05950ce71.bundle.js"></script><script type="text/javascript" src="main.c7671fa29f6b6579a6a9.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.e7a0c8b2ad87e5f8c1e4.bundle.js"></script><script type="text/javascript" src="main.eda47a8551f4779a18cf.bundle.js"></script></body>
 </html>
